Duke Nukem Forever support (#73)
* ut99->ut3/ut4: fixed crash when converting SpectatorCam

* dnf: added support for Duke Nukem Forever

* all: if umodel fails to load package, use UCC
ue12->ut3: sheet brushes causing BSP holes are now converted into semi-solid (will not cause bsp holes)

* dnf: fixed not building texture db files for .Dtx files

* dnf->ut3/ut4: force .pcx exported textures to be converted to .bmp (ut4 does not support .pcx and ut3 editor sometimes crashes on some files)

* test: added test class to test converting all maps at once of any game

* fixed packaged version not starting

* fixed check for update ssl handshake error while using check for update menu

* ui: allow user to set custom scale for conversion + added other scale choices in list